# serializer version: 1
# name: test_lights[color_temperature_light][light.mock_color_temperature_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_color_temperature_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-0000000000000005-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[color_temperature_light][light.mock_color_temperature_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 3521,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Color Temperature Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        27.152,
        44.32,
      ),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        193,
        142,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.452,
        0.373,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_color_temperature_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[extended_color_light][light.mock_extended_color_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_extended_color_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000000A-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[extended_color_light][light.mock_extended_color_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.HS: 'hs'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Extended Color Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        51.024,
        20.079,
      ),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        247,
        204,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.362,
        0.373,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_extended_color_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[inovelli_vtm30][light.white_series_onoff_switch_light_rgb_indicator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 1000000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 15,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.white_series_onoff_switch_light_rgb_indicator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light (RGB Indicator)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light (RGB Indicator)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-6-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[inovelli_vtm30][light.white_series_onoff_switch_light_rgb_indicator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'White Series OnOff Switch Light (RGB Indicator)',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 1000000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 15,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.white_series_onoff_switch_light_rgb_indicator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_lights[inovelli_vtm31][light.inovelli_light_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.inovelli_light_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light (1)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[inovelli_vtm31][light.inovelli_light_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Inovelli Light (1)',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.inovelli_light_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_lights[inovelli_vtm31][light.inovelli_light_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.inovelli_light_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light (6)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light (6)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-6-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[inovelli_vtm31][light.inovelli_light_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Inovelli Light (6)',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.inovelli_light_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_lights[mock_dimmable_light][light.mock_dimmable_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_dimmable_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000000D-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_dimmable_light][light.mock_dimmable_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 51,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Dimmable Light',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[mock_dimmable_plugin_unit][light.dimmable_plugin_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmable_plugin_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-0000000000000024-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_dimmable_plugin_unit][light.dimmable_plugin_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 255,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dimmable Plugin Unit',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmable_plugin_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[mock_mounted_dimmable_load_control_fixture][light.mock_mounted_dimmable_load_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_mounted_dimmable_load_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000000E-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_mounted_dimmable_load_control_fixture][light.mock_mounted_dimmable_load_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Mounted dimmable load control',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_mounted_dimmable_load_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_lights[mock_onoff_light][light.mock_onoff_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_onoff_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000001E-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_onoff_light][light.mock_onoff_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock OnOff Light',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_onoff_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[mock_onoff_light_alt_name][light.mock_onoff_light_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_onoff_light_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000001B-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_onoff_light_alt_name][light.mock_onoff_light_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock OnOff Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_onoff_light_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[mock_onoff_light_no_name][light.mock_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-000000000000001C-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[mock_onoff_light_no_name][light.mock_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[onoff_light_with_levelcontrol_present][light.d215s-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.d215s',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-0000000000000030-MatterNodeDevice-1-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[onoff_light_with_levelcontrol_present][light.d215s-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'D215S',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.d215s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_lights[silabs_range_hood][light.sl_rangehood-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.sl_rangehood',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '00000000000004D2-0000000000000072-MatterNodeDevice-2-MatterLight-6-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[silabs_range_hood][light.sl_rangehood-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SL-RangeHood',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.sl_rangehood',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
